--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "firebase": "^8.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
