--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-google-button": "^0.7.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
